Slider fix on mobile

--- a/app/assets/stylesheets/static/slider.scss
+++ b/app/assets/stylesheets/static/slider.scss
@@ -96,15 +96,19 @@
   }
 
   .slick-next, .slick-prev, .arrow-right, .arrow-left {
-    display: none;
+    // display: none;
 
-    @media screen and (min-width: $screen-m) {
-      display: inherit;
-    }
+    // @media screen and (min-width: $screen-m) {
+    //   display: inherit;
+    // }
   }
 
   .slick-prev {
-    left: 0;
+    left: -7px;
+
+    @media screen and (min-width: $screen-m) {
+      left: 2px;
+    }
 
     &:before {
       content: '<';
@@ -112,7 +116,11 @@
   }
 
   .slick-next {
-    right: 10px;
+    right: 4px;
+
+    @media screen and (min-width: $screen-m) {
+      right: 12px;
+    }
 
     &:before {
       content: '>';
@@ -121,7 +129,6 @@
 
   .slick-next:before, .slick-prev:before {
     position: absolute;
-    color: lightgrey;
     top: 50%;
     color: $color-2;
     z-index: 3;
@@ -140,11 +147,19 @@
 
   .arrow-right {
     right: 0;
-    transform: translate(360px, -50%);
+    transform: translate(380px, -50%);
+
+    @media screen and (min-width: $screen-m) {
+      transform: translate(360px, -50%);
+    }
   }
 
   .arrow-left {
     left: 0;
-    transform: translate(-360px, -50%);
+    transform: translate(-380px, -50%);
+
+    @media screen and (min-width: $screen-m) {
+      transform: translate(-360px, -50%);
+    }
   }
 }
